--- a/.gitignore
+++ b/.gitignore
@@ -104,5 +104,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-secrets.py
+points/secrets.py
 db.sqlite3
