--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-BeautifulSoup==3.2.1
-Django==1.7.1
-requests==2.5.0
+Django==1.9.4
+beautifulsoup4==4.4.1
+bs4==0.0.1
+dj-database-url==0.4.0
+gunicorn==19.4.5
+requests==2.9.1
+whitenoise==2.0.6
 wsgiref==0.1.2
