--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.4.1
 bs4==0.0.1
 dj-database-url==0.4.0
 gunicorn==19.4.5
+psycopg2==2.6.1
 requests==2.9.1
 whitenoise==2.0.6
 wsgiref==0.1.2
